Second_Step/data/extract_data_vpl/46/9/grade_comments.txt
-The compilation or preparation of execution has failed
Tools.java:25: error: illegal start of expression
    public static int fastNumberOfCancellations(int[] tab) {
    ^
Tools.java:25: error: illegal start of expression
    public static int fastNumberOfCancellations(int[] tab) {
           ^
Tools.java:25: error: ';' expected
    public static int fastNumberOfCancellations(int[] tab) {
                 ^
Tools.java:25: error: '.class' expected
    public static int fastNumberOfCancellations(int[] tab) {
                                                      ^
Tools.java:25: error: ';' expected
    public static int fastNumberOfCancellations(int[] tab) {
                                                         ^
Tools.java:26: error: ';' expected
voir sil falait tirer avant le tableu pour avoric a
        ^
Tools.java:26: error: ';' expected
voir sil falait tirer avant le tableu pour avoric a
                     ^
Tools.java:26: error: ';' expected
voir sil falait tirer avant le tableu pour avoric a
                              ^
Tools.java:26: error: ';' expected
voir sil falait tirer avant le tableu pour avoric a
                                          ^
Tools.java:26: error: ';' expected
voir sil falait tirer avant le tableu pour avoric a
                                                   ^
Tools.java:29: error: reached end of file while parsing
}
 ^
11 errors
Not compiled
